<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint</artifactId>
        <version>2.5.1-p1</version>
    </parent>

    <artifactId>pinpoint-hbase</artifactId>
    <name>pinpoint-hbase-distribution</name>

    <packaging>pom</packaging>

    <properties>
        <jdk.version>11</jdk.version>
        <jdk.home>${env.JAVA_11_HOME}</jdk.home>
    </properties>

    <modules>
        <module>hbase-schema</module>
        <module>hbase-schema-manager</module>
        <module>hbase-schema-definition</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.navercorp.pinpoint</groupId>
                <artifactId>pinpoint-hbase-schema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.navercorp.pinpoint</groupId>
                <artifactId>pinpoint-hbase-schema-definition</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>jaxb2-maven-plugin</artifactId>
                    <version>2.5.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
